--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,9 @@
 /* styles go here */
+.form_field:not(:last-child) {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form_fieldset {
+  margin-bottom: 20px;
+}
